--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
+    "lodash": ">=4.17.21",
     "history": "^5.3.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
@@ -51,6 +52,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "lodash": ">=4.17.21",
     "stylelint": "^8.4.0",
     "stylelint-config-airbnb": "^0.0.0"
   }
