--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
     "lodash": ">=4.17.21",
-    "stylelint": "^8.4.0",
-    "stylelint-config-airbnb": "^0.0.0"
+    "stylelint": "^8.4.0"
   }
 }
