--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
+    "glob-parent": ">=5.1.2",
     "lodash": ">=4.17.21",
+    "nth-check": ">=2.0.1",
+    "trim": ">=0.0.3",
+    "trim-newlines": ">=3.0.1",
     "history": "^5.3.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
@@ -52,7 +56,11 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "glob-parent": ">=5.1.2",
     "lodash": ">=4.17.21",
+    "nth-check": ">=2.0.1",
+    "trim": ">=0.0.3",
+    "trim-newlines": ">=3.0.1",
     "stylelint": "^8.4.0"
   }
 }
