--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://ibrahimborba.github.io/projects/trybewallet",
   "name": "trybewallet",
   "version": "0.1.0",
   "private": true,
@@ -7,11 +8,9 @@
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
     "glob-parent": ">=5.1.2",
+    "history": "^5.3.0",
     "lodash": ">=4.17.21",
     "nth-check": ">=2.0.1",
-    "trim": ">=0.0.3",
-    "trim-newlines": ">=3.0.1",
-    "history": "^5.3.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -22,9 +21,13 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.5",
+    "trim": ">=0.0.3",
+    "trim-newlines": ">=3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -56,11 +59,12 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "gh-pages": "^4.0.0",
     "glob-parent": ">=5.1.2",
     "lodash": ">=4.17.21",
     "nth-check": ">=2.0.1",
+    "stylelint": "^8.4.0",
     "trim": ">=0.0.3",
-    "trim-newlines": ">=3.0.1",
-    "stylelint": "^8.4.0"
+    "trim-newlines": ">=3.0.1"
   }
 }
