fix: change homepage path

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ibrahimborba.github.io/projects/trybewallet",
+  "homepage": "https://ibrahimborba.github.io/trybewallet",
   "name": "trybewallet",
   "version": "0.1.0",
   "private": true,
